<resources>
    <string name="app_name">Video Doorbell</string>
    <!-- 环信工程的APPID -->
    <string name="EASEMOB_APPKEY">1104210802085866#agoracalldemo</string>
    <!-- 声网工程的APPID -->
    <string name="AGORA_APPID">d0177a34373b482a9c4eb4dedcfa586a</string>
    <!-- 谷歌FCM项目senderid，控制FCM是否开启的变量在bools.xml中配置 -->
    <string name="FCM_SENDERID">73974497007</string>
    <!-- 华为手机离线推送APPKID，注意‘appid=’不要删除 -->
    <string name="HUAWEI_PUSH_APPKID">appid=104676201</string>
    <!-- VIVO手机离线推送APPKEY，其对应APPID为int型变量，在integer.xml中填写 -->
    <string name="VIVO_PUSH_APPKEY">10451067442351313131a</string>
    <!-- 魅族手机离线推送APPKEY -->
    <string name="MEIZU_PUSH_APPKEY">284210d0be8d49e89e2624a2daf66701</string>
    <!-- 魅族手机离线推送APPID -->
    <string name="MEIZU_PUSH_APPID">144173</string>
    <!-- OPPO手机离线推送APPKEY -->
    <string name="OPPO_PUSH_APPKEY">af6cb96b36164bf4aec018a30a54f114</string>
    <!-- OPPO手机离线推送APPSECRET -->
    <string name="OPPO_PUSH_APPSECRET">35cd1752fd6d4c3fba3d4deb9491b72c</string>
    <!-- 小米手机离线推送APPKEY -->
    <string name="MI_PUSH_APPKEY">5932003199708</string>
    <!-- 小米手机离线推送APPID -->
    <string name="MI_PUSH_APPID">2882303761520031708</string>
    <!-- 声网业务服务URL，以UID索引处理绑定、联系人等逻辑 -->
    <string name="AGORA_SERVER_URL">https://iot.sh2.agoralab.co/super-app/v1</string>
    <!-- 客户自建业务服务URL，处理UID和account的映射关系 -->
    <string name="CUSTOM_SERVER_URL">https://iot.sh2.agoralab.co/register/v1</string>
    <!-- 设备绑定服务URL，处理UserAccount和Device的映射关系 -->
    <string name="BINDING_SERVER_URL">http://iot.sh2.agoralab.co/binding/v1</string>
    <!-- 离线/后台运行消息通知channel ID，安卓8.0以上需要 -->
    <string name="EASE_NOTIFIER_CHANNEL_ID">high_system</string>

    <!--***************************以下是国际化用到的字段***************************-->
    <!--*************************************************************************-->

    <!--语言设置成功-->
    <string name="LANGUAGE_SET_SUCCESS">设置成功</string>
    <!--呼叫已经失效-->
    <string name="CALL_IS_EXPIRED">呼叫已经失效！</string>
    <!--设备名称-->
    <string name="EQUIPMENT_NAME">设备名称</string>
    <!--网络状态-->
    <string name="NETWORK_STATUS">网络状态:</string>
    <!--账号-->
    <string name="ACCOUNT">账号:</string>
    <!--状态-->
    <string name="STATE">状态:</string>
    <!--呼叫-->
    <string name="CALL">呼叫:</string>
    <!--正常-->
    <string name="NORMAL">正常</string>
    <!--注册-->
    <string name="REGISTER">注册</string>
    <!--登录-->
    <string name="LOG_IN">登录</string>
    <!--接听-->
    <string name="ANSWER">接听</string>
    <!--分辨率-->
    <string name="RESOLVING_POWER">分辨率</string>
    <!--帧率-->
    <string name="FRAME_RATE">帧率</string>
    <!--码率-->
    <string name="BIT_RATE">码率</string>
    <!--时延-->
    <string name="TIME_DELAY">时延</string>
    <!--音频-->
    <string name="AUDIO_FREQUENCY">音频</string>
    <!--挂断-->
    <string name="HANG_UP">挂断</string>
    <!--变声-->
    <string name="CHANGE_VOICE">变声</string>
    <!--设置-->
    <string name="SET">设置</string>
    <!--音效-->
    <string name="SOUND_EFFECT">音效</string>
    <!--原声-->
    <string name="ORIGINAL_SOUND">原声</string>
    <!--大叔-->
    <string name="UNCLE">大叔</string>
    <!--萝莉-->
    <string name="LOLITA">萝莉</string>
    <!--少年-->
    <string name="JUVENILE">少年</string>
    <!--成功-->
    <string name="SUCCESS">成功</string>
    <!--失败-->
    <string name="FAILED">失败</string>
    <!--错误-->
    <string name="ERROR">错误</string>
    <!--确定-->
    <string name="DETERMINE">确定</string>
    <!--取消-->
    <string name="CANCEL">取消</string>
    <!--呼叫通知-->
    <string name="CALL_NOTIFICATION">呼叫通知</string>
    <!--呼叫设备-->
    <string name="CALL_EQUIPMENT">呼叫设备</string>
    <!--呼叫用户-->
    <string name="CALL_USER">呼叫用户</string>
    <!--正在呼叫-->
    <string name="CALLING">正在呼叫</string>
    <!--绑定设备-->
    <string name="BIND_EQUIPMENT">绑定设备</string>
    <!--解绑设备-->
    <string name="UNBIND_EQUIPMENT">解绑设备</string>
    <!--刷新设备-->
    <string name="REFRESH_EQUIPMENT">刷新设备</string>
    <!--通话中-->
    <string name="ON_THE_PHONE">通话中</string>
    <!--登出中-->
    <string name="LOGGING_OUT">登出中...</string>
    <!--注册中-->
    <string name="REGISTERING">注册中...</string>
    <!--登录中-->
    <string name="LOGGING">登陆中...</string>
    <!--自动登陆中-->
    <string name="LOGGING_AUTO">自动登陆中...</string>
    <!--正在初始化-->
    <string name="INITIALIZING">正在初始化...</string>
    <!--退出登录-->
    <string name="LOGGOUT">退出登录</string>
    <!--不能登出-->
    <string name="UNABLE_TO_LOGGING_OUT">不能登出</string>
    <!--登出失败-->
    <string name="LOGOUT_FAILED">登出失败</string>
    <!--注册失败-->
    <string name="REGISTER_FAILED">注册失败</string>
    <!--不能呼叫-->
    <string name="UNABLE_TO_CALL">不能呼叫</string>
    <!--不能登录-->
    <string name="UNABLE_TO_LOG">不能登录</string>
    <!--登录失败-->
    <string name="LOG_FAILED">登录失败</string>
    <!--不能继续注册-->
    <string name="UNABLE_TO_CONTINUE_REGISTER">不能继续注册</string>
    <!--不能自动登录-->
    <string name="UNABLE_TO_LOG_AUTO">不能自动登录</string>
    <!--注册成功-->
    <string name="REGISTER_SUCCESS">注册成功</string>
    <!--错误码-->
    <string name="ERROR_CODE">错误码</string>
    <!--没有有效的账号-->
    <string name="NO_VALID_ACCOUNT">没有有效的账号</string>
    <!--等待对方接听-->
    <string name="WAITING_FOR_THE_OTHER_TO_ANSWER">等待对方接听...</string>
    <!--对方已挂断-->
    <string name="THE_OTHER_HANG_UP">对方已挂断!</string>
    <!--对方正在通话中，请稍后再拨！-->
    <string name="THE_OTHER_ON_THE_PHONE">对方正在通话中，请稍后再拨！</string>
    <!--您呼叫用户拒绝，请稍后再拨！-->
    <string name="THE_OTHER_REFUSED">您呼叫用户拒绝，请稍后再拨！</string>
    <!--您呼叫用户无人接听，请稍后再拨！-->
    <string name="NO_ANSWER">您呼叫用户无人接听，请稍后再拨！</string>
    <!--点击接听-->
    <string name="CLICK_TO_ANSWER">请点击接听...</string>
    <!--账号在其他设备登录，本地立即退出-->
    <string name="ACCOUNT_REMOTE_LOGIN">账号在其他设备登录，本地立即退出！</string>
    <!--当前设备账号-->
    <string name="CURRENT_EQUITMENT_ACCOUNT">当前设备账号:</string>
    <!--当前用户账号-->
    <string name="CURRENT_USER_ACCOUNT">当前用户账号:</string>
    <!--要呼叫的用户或设备账号-->
    <string name="USER_OR_EQUIPMENT_ACCOUNT_TO_CALL">要呼叫的用户或设备账号:</string>
    <!--输入要呼叫的账号-->
    <string name="ENTER_THE_ACCOUNT_TO_CALL">输入要呼叫的账号</string>
    <!--输入要绑定的设备ID:-->
    <string name="ENTER_THE_EQUIPMENT_ID_TO_BIND">输入要绑定的设备ID: </string>
    <!--输入要解除绑定的设备ID:-->
    <string name="ENTER_THE_EQUIPMENT_ID_TO_UNBIND">输入要解绑的设备ID: </string>
    <!--绑定成功-->
    <string name="BIND_SUCCESS">绑定成功</string>
    <!--绑定失败-->
    <string name="BIND_FAILED">绑定失败</string>
    <!--解绑成功-->
    <string name="UNBIND_SUCCESS">解绑成功</string>
    <!--解绑失败-->
    <string name="UNBIND_FAILED">解绑失败</string>
    <!--当前账号没有查询到绑定的设备-->
    <string name="NO_BIND_EQUIPMENT_IN_ACCOUNT">当前账号没有查询到绑定的设备!</string>
    <!--当前账号没有查询到绑定的用户-->
    <string name="NO_BIND_USER_IN_ACCOUNT">当前账号没有查询到绑定的用户!</string>
    <!--前账号绑定设备信息-->
    <string name="BIND_EQUIPMENT_INFOR_PRE_ACCOUNT">前账号绑定设备信息:</string>
    <!--输入要告警的信息-->
    <string name="ENTER_THE_INFORMATION_TO_BE_ALARMED">输入要告警的信息:</string>
    <!--发送告警消息-->
    <string name="SEND_ALARM_INFO">发送告警消息</string>
    <!--不能触发告警-->
    <string name="CANNOT_TRIGGER_ALARM">不能触发告警</string>
    <!--不能查询告警记录-->
    <string name="CANNOT_QUERY_ALARM">不能查询告警记录</string>
    <!--查询到的告警记录数目为-->
    <string name="ALARM_RECORDS_NUM_QUERIED_IS">查询到的告警记录数目为:</string>
    <!--接收到来自-->
    <string name="RECEIVE_FROM">接收到来自:</string>
    <!--的告警信息-->
    <string name="ALARM_MESSAGE">的告警消息: </string>
    <!--告警触发-->
    <string name="ALARM_TRIGGER">告警触发</string>
    <!--告警查询-->
    <string name="ALARM_QUERY">告警查询</string>
    <!--开始启动云录制-->
    <string name="START_CLOUD_RECORDING">开始启动云录制......</string>
    <!--云录制结束，文件列表：-->
    <string name="CLOUD_RECORDING_FINISHED_AND_FILE_LIST">云录制结束，文件列表：</string>
    <!--设置音频格式-->
    <string name="FORMAT_AUDIO">设置音频格式</string>
    <!--音频编码格式-->
    <string name="AUDIO_CODING_FORMAT">音频编码格式:</string>
    <!--设置私参-->
    <string name="SET_PRIVATE_PARAMETER">设置私参</string>
    <!--输入要设置的私有参数-->
    <string name="ENTER_PRIVATE_PARAM_TO_BE_SET">输入要设置的私有参数</string>
    <!--请输入账号-->
    <string name="INPUT_ACCOUNT">请输入账号</string>
    <!--有人按门铃-->
    <string name="SOMEONE_RING_DOORBELL">有人按门铃</string>
    <!--实时通话-->
    <string name="LIVE_CALL">实时通话</string>
    <!--第一个设备ID-->
    <string name="FIRST_DEVICE_ID">第一个设备ID:</string>
    <!--第二个设备ID-->
    <string name="SECOND_DEVICE_ID">第二个设备ID:</string>
    <!--第三个设备ID-->
    <string name="THIRD_DEVICE_ID">第三个设备ID:</string>
    <!--作为移动应用运行-->
    <string name="RUN_AS_MOBILE_APP">作为移动应用运行</string>
    <!--作为IOT设备运行-->
    <string name="RUN_AS_IoT_DEVICE">作为IoT设备运行</string>
    <!--双讲通话-->
    <string name="DUAL_TALK">双讲通话</string>
    <!--视频标题-->
    <string name="VIDEO_TITLE">视频标题</string>
    <!--事件时间-->
    <string name="ENENT_TIME">事件时间</string>
    <!--事件类型-->
    <string name="EVENT_TYPE">事件类型</string>
    <!--智能门铃-->
    <string name="SMART_DOORBELL">智能门铃</string>
</resources>