<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"    >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/editTextLocalAccount"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/CURRENT_USER_ACCOUNT"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="20dp"
        android:text="@string/LOGGOUT" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextCallAccount"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:hint="@string/ENTER_THE_ACCOUNT_TO_CALL"
        android:inputType="textWebEditText"
        android:lines="1"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginTop="100dp"
        android:text="@string/CALL" />

    <RadioGroup
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="160dp"
        >

        <RadioButton
            android:id="@+id/btn_call_dev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/CALL_EQUIPMENT"
            android:textSize="8pt"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/btn_call_usr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:text="@string/CALL_USER"
            android:textSize="8pt"/>

    </RadioGroup>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </RadioGroup>
    <Button
        android:id="@+id/btn_dev_bind"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="220dp"
        android:text="@string/BIND_EQUIPMENT"
        android:textSize="5pt"/>

    <Button
        android:id="@+id/btn_dev_unbind"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="220dp"
        android:text="@string/UNBIND_EQUIPMENT"
        android:textSize="5pt"/>

    <Button
        android:id="@+id/btn_dev_refresh"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="260dp"
        android:layout_marginTop="220dp"
        android:text="@string/REFRESH_EQUIPMENT"
        android:textSize="5pt"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_devices"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="280dp"    />


    <Button
        android:id="@+id/btn_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="580dp"
        android:text="@string/SET" />

    <Button
        android:id="@+id/btn_alarm_trigger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="580dp"
        android:text="@string/ALARM_TRIGGER" />

    <Button
        android:id="@+id/btn_alarm_query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="580dp"
        android:text="@string/ALARM_QUERY" />

</RelativeLayout>