<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setting_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="MissingConstraints">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="0dp"   >

    <RadioButton
        android:id="@+id/btn_as_user"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:checked="true"
        android:text="@string/RUN_AS_MOBILE_APP"/>

    <RadioButton
        android:id="@+id/btn_as_dev"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:checked="false"
        android:text="@string/RUN_AS_IoT_DEVICE"/>

    </RadioGroup>


    <CheckBox
        android:id="@+id/cb_doubletalk"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="20dp"
        android:checked="false"
        android:text="@string/DUAL_TALK"/>


</RelativeLayout>